--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -43,10 +43,16 @@ jobs:
   pool:
     vmImage: vs2017-win2016
   steps:
+  - powershell: |
+      $week = (Invoke-WebRequest https://whatsprintis.it -Headers @{"Accept"= "application/json"} | ConvertFrom-Json).week
+      Write-Host "##vso[task.setvariable variable=week]$week"
+    displayName: "Determine if its the last week of the sprint"
   - checkout: AzureDevOps
     fetchDepth: 1
     persistCredentials: true
+    condition: and(succeeded(), eq(variables['WEEK'], '3'))
   - checkout: self
+    condition: and(succeeded(), eq(variables['WEEK'], '3'))
   - template: ci/courtesy-push.yml
 
 # All tasks on Linux
