--- a/Tasks/BashV3/package.json
+++ b/Tasks/BashV3/package.json
@@ -17,7 +17,13 @@
   },
   "homepage": "https://github.com/Microsoft/azure-pipelines-tasks#readme",
   "dependencies": {
-    "uuid": "^3.0.1",
-    "azure-pipelines-task-lib": "2.11.1"
+    "@types/node": "^14.10.0",
+    "@types/mocha": "^5.2.7",
+    "@types/uuid": "^8.3.0",
+    "uuid": "^8.3.0",
+    "azure-pipelines-task-lib": "3.0.1-preview"
+  },
+  "devDependencies": {
+    "typescript": "4.0.2"
   }
 }
