Updated ownership of PublishTest task
Updated task owner for PublishTest task. This is used by bot to auto assign the issues to the right owner.

--- a/issue-rules.yml
+++ b/issue-rules.yml
@@ -270,6 +270,7 @@ rules:
 - valueFor: '**Enter Task Name**'
   contains: 'PublishTest'
   addLabels: ['Area: Test']
+  assign: ['shailesh-sk']
   
 # Area: ArtifactsPackages
 - valueFor: '**Enter Task Name**'
