--- a/issue-rules.yml
+++ b/issue-rules.yml
@@ -269,7 +269,7 @@ rules:
   assign: ['phanikmmsft']
 - valueFor: '**Enter Task Name**'
   contains: 'PublishTest'
-  addLabels: ['Area: Test']
+  addLabels: ['Area: TestManagement']
   assign: ['shailesh-sk']
   
 # Area: ArtifactsPackages
