Updated ownership of PublishTest task (#13683)
* Updated ownership of PublishTest task

Updated task owner for PublishTest task. This is used by bot to auto assign the issues to the right owner.

* Update issue-rules.yml

Co-authored-by: Chaitanya Shrikhande <chshrikh@github.com>

--- a/issue-rules.yml
+++ b/issue-rules.yml
@@ -281,7 +281,8 @@ rules:
   assign: ['phanikmmsft']
 - valueFor: '**Enter Task Name**'
   contains: 'PublishTest'
-  addLabels: ['Area: Test']
+  addLabels: ['Area: TestManagement']
+  assign: ['shailesh-sk']
   
 # Area: ArtifactsPackages
 - valueFor: '**Enter Task Name**'
