--- a/common-npm-packages/ios-signing-common/package.json
+++ b/common-npm-packages/ios-signing-common/package.json
@@ -1,6 +1,6 @@
 {
   "name": "azure-pipelines-tasks-ios-signing-common",
-  "version": "1.177.0",
+  "version": "2.0.0-preview",
   "description": "Azure Pipelines tasks iOS Signing Common",
   "main": "ios-signing-common.js",
   "scripts": {
@@ -17,9 +17,11 @@
   },
   "homepage": "https://github.com/Microsoft/azure-pipelines-tasks#readme",
   "dependencies": {
-    "azure-pipelines-task-lib": "^2.8.0"
+    "azure-pipelines-task-lib": "^3.0.1-preview"
   },
   "devDependencies": {
-    "typescript": "2.3.4"
+    "@types/node": "^14.10.0",
+    "@types/q": "^1.5.4",
+    "typescript": "^4.0.0"
   }
 }
