--- a/common-npm-packages/securefiles-common/package.json
+++ b/common-npm-packages/securefiles-common/package.json
@@ -1,6 +1,6 @@
 {
   "name": "azure-pipelines-tasks-securefiles-common",
-  "version": "2.0.0-preview",
+  "version": "2.0.1-preview",
   "description": "Azure Pipelines tasks SecureFiles Common",
   "main": "securefiles-common.js",
   "scripts": {
@@ -17,12 +17,12 @@
   },
   "homepage": "https://github.com/Microsoft/azure-pipelines-tasks#readme",
   "dependencies": {
+    "@types/node": "^14.10.0",
+    "@types/q": "^1.5.4",
     "azure-devops-node-api": "7.2.0",
     "azure-pipelines-task-lib": "^3.0.1-preview"
   },
   "devDependencies": {
-    "typescript": "^4.0.0",
-    "@types/node": "^14.10.0",
-    "@types/q": "^1.5.4"
+    "typescript": "^4.0.0"
   }
 }
