--- a/Tasks/InstallAppleProvisioningProfileV1/package.json
+++ b/Tasks/InstallAppleProvisioningProfileV1/package.json
@@ -19,11 +19,11 @@
   "dependencies": {
     "azure-pipelines-tasks-ios-signing-common": "2.0.0-preview",
     "azure-pipelines-tasks-securefiles-common": "2.0.0-preview",
-    "azure-pipelines-task-lib": "^3.0.1-preview"
+    "azure-pipelines-task-lib": "^3.0.1-preview",
+    "@types/mocha": "^8.0.3",
+    "@types/node": "^14.11.8"
   },
   "devDependencies": {
-    "@types/mocha": "^8.0.3",
-    "@types/node": "^14.11.8",
     "typescript": "4.0.2"
   }
 }
