--- a/common-npm-packages/securefiles-common/package.json
+++ b/common-npm-packages/securefiles-common/package.json
@@ -1,6 +1,6 @@
 {
   "name": "azure-pipelines-tasks-securefiles-common",
-  "version": "2.0.1-preview",
+  "version": "2.0.2-preview",
   "description": "Azure Pipelines tasks SecureFiles Common",
   "main": "securefiles-common.js",
   "scripts": {
@@ -20,7 +20,7 @@
     "@types/node": "^14.10.0",
     "@types/q": "^1.5.4",
     "azure-devops-node-api": "7.2.0",
-    "azure-pipelines-task-lib": "^3.0.1-preview"
+    "azure-pipelines-task-lib": "3.0.3-preview"
   },
   "devDependencies": {
     "typescript": "^4.0.0"
