--- a/common-npm-packages/ios-signing-common/package.json
+++ b/common-npm-packages/ios-signing-common/package.json
@@ -18,10 +18,12 @@
   "homepage": "https://github.com/Microsoft/azure-pipelines-tasks#readme",
   "dependencies": {
     "@types/node": "^14.10.0",
-    "@types/q": "^1.5.4",
-    "azure-pipelines-task-lib": "^3.0.3-preview"
+    "@types/q": "^1.5.4"
   },
   "devDependencies": {
     "typescript": "^4.0.0"
+  },
+  "peerDependencies": {
+    "azure-pipelines-task-lib": "^3.0.1-preview"
   }
 }
