Allow common packages to be built locally

--- a/common-npm-packages/ios-signing-common/package.json
+++ b/common-npm-packages/ios-signing-common/package.json
@@ -21,6 +21,7 @@
     "@types/q": "^1.5.4"
   },
   "devDependencies": {
+    "azure-pipelines-task-lib": "^3.0.1-preview",
     "typescript": "^4.0.0"
   },
   "peerDependencies": {
