--- a/common-npm-packages/securefiles-common/package.json
+++ b/common-npm-packages/securefiles-common/package.json
@@ -22,6 +22,7 @@
     "azure-devops-node-api": "7.2.0"
   },
   "devDependencies": {
+    "azure-pipelines-task-lib": "^3.0.1-preview",
     "typescript": "^4.0.0"
   },
   "peerDependencies": {
