--- a/ci/build-all-steps.yml
+++ b/ci/build-all-steps.yml
@@ -56,10 +56,10 @@ steps:
     displayName: Stage tasks individually into the package directory
     condition: and(succeeded(), ne(variables['build.reason'], 'PullRequest'), ne(variables['numTasks'], 0))
 
-  # Sign all task zips as nuget packages
-  - template: sign-all-tasks.yml
-    parameters:
-      layoutRoot: $(Build.SourcesDirectory)\_package\tasks-layout
+  # # Sign all task zips as nuget packages
+  # - template: sign-all-tasks.yml
+  #   parameters:
+  #     layoutRoot: $(Build.SourcesDirectory)\_package\tasks-layout
 
   # Stage all the tasks into a single zip for upload
   - script: node ./ci/stage-package.js
