--- a/common-npm-packages/azure-arm-rest-v2/package.json
+++ b/common-npm-packages/azure-arm-rest-v2/package.json
@@ -16,7 +16,7 @@
     "jsonwebtoken": "7.3.0",
     "q": "1.4.1",
     "typed-rest-client": "1.7.3",
-    "azure-pipelines-task-lib": "2.11.2",
+    "azure-pipelines-task-lib": "^2.11.2",
     "@types/mocha": "2.2.48",
     "@types/node": "6.0.68",
     "@types/q": "1.0.7"
