--- a/Tasks/CmdLineV2/package.json
+++ b/Tasks/CmdLineV2/package.json
@@ -17,10 +17,11 @@
   },
   "homepage": "https://github.com/Microsoft/azure-pipelines-tasks#readme",
   "dependencies": {
-    "uuid": "^3.0.1",
+    "@types/uuid": "^8.3.0",
     "@types/mocha": "^8.0.3",
-    "@types/node": "^6.0.0",
-    "azure-pipelines-task-lib": "^2.11.1"
+    "@types/node": "^10.17.0",
+    "uuid": "^8.3.0",
+    "azure-pipelines-task-lib": "^3.0.5-preview"
   },
   "devDependencies": {
     "typescript": "4.0.2"
