--- a/Tasks/InstallAppleCertificateV2/package.json
+++ b/Tasks/InstallAppleCertificateV2/package.json
@@ -17,11 +17,11 @@
   },
   "homepage": "https://github.com/Microsoft/azure-pipelines-tasks#readme",
   "dependencies": {
-    "@types/node": "^14.10.0",
+    "@types/node": "^10.17.0",
     "@types/mocha": "^5.2.7",
-    "azure-pipelines-tasks-securefiles-common": "2.0.0-preview",
-    "azure-pipelines-tasks-ios-signing-common": "2.0.0-preview",
-    "azure-pipelines-task-lib": "3.0.3-preview"
+    "azure-pipelines-tasks-securefiles-common": "2.0.3-preview",
+    "azure-pipelines-tasks-ios-signing-common": "2.0.3-preview",
+    "azure-pipelines-task-lib": "^3.0.6-preview"
   },
   "devDependencies": {
     "typescript": "4.0.2"
