--- a/Tasks/GoToolV0/package.json
+++ b/Tasks/GoToolV0/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/Microsoft/azure-pipelines-tasks#readme",
   "dependencies": {
     "azure-pipelines-tool-lib": "0.12.0",
-    "azure-pipelines-task-lib": "2.8.0"
+    "azure-pipelines-task-lib": "2.8.0",
+    "utility-common": "file:../../_build/Tasks/Common/utility-common-1.0.2.tgz"
   }
 }
