--- a/Tasks/NodeToolV0/package.json
+++ b/Tasks/NodeToolV0/package.json
@@ -28,6 +28,7 @@
     "@types/q": "^1.0.7",
     "typed-rest-client": "1.0.7",
     "azure-pipelines-task-lib": "^2.9.3",
-    "azure-pipelines-tool-lib": "^0.12.0"
+    "azure-pipelines-tool-lib": "^0.12.0",
+    "utility-common": "file:../../_build/Tasks/Common/utility-common-1.0.2.tgz"
   }
 }
