Automatically publish common packages

--- a/ci/build-common-npm.yml
+++ b/ci/build-common-npm.yml
@@ -18,3 +18,11 @@ steps:
       npm install
       npm run build
   displayName: Build shared packages
+
+# For CI runs on master, automatically publish packages
+- script: |
+      cd common-npm-packages
+      npm run publish
+  condition: and(succeeded(), in(variables['build.reason'], 'IndividualCI', 'BatchedCI', 'Manual'), eq(variables['build.sourcebranchname'], 'master'), eq(variables.os, 'Windows_NT'))
+  env:
+    NPM_TOKEN: $(npmPublishToken)
