--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ gulp-tsc-tmp-*
 common-npm-packages/**/*.js
 !common-npm-packages/**/make.js
 !common-npm-packages/build-scripts/**.js
+common-npm-packages/**/*openssl.zip
 [Tt]asks/**/*.js
 [Tt]ests/**/*.js
 !**/mock_node_modules/**/*.js
