--- a/ci/build-common-npm.yml
+++ b/ci/build-common-npm.yml
@@ -22,6 +22,7 @@ steps:
 # For CI runs on master, automatically publish packages
 - script: |
       cd common-npm-packages
+      echo "//registry.npmjs.org/:_authToken=${NPM_TOKEN}" > .npmrc
       npm run publish
   condition: and(succeeded(), in(variables['build.reason'], 'IndividualCI', 'BatchedCI', 'Manual'), eq(variables['build.sourcebranchname'], 'master'), eq(variables.os, 'Windows_NT'))
   env:
