--- a/common-npm-packages/package.json
+++ b/common-npm-packages/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/microsoft/azure-pipelines-tasks-common/issues"
   },
-  "homepage": "https://github.com/microsoft/azure-pipelines-tasks-common#readme"
+  "homepage": "https://github.com/microsoft/azure-pipelines-tasks-common#readme",
+  "dependencies": {
+    "shelljs": "^0.8.4",
+    "sync-request": "^6.1.0"
+  }
 }
