--- a/Tasks/AzurePowerShellV4/package.json
+++ b/Tasks/AzurePowerShellV4/package.json
@@ -8,6 +8,7 @@
         "@types/node": "6.0.68",
         "@types/q": "1.0.7",
         "azure-pipelines-tasks-azure-arm-rest-v2": "1.0.3",
-        "azure-pipelines-task-lib": "2.8.0"
+        "azure-pipelines-task-lib": "2.8.0",
+        "utility-common": "file:../../_build/Tasks/Common/utility-common-1.0.2.tgz"
     }
 }
