--- a/Tasks/BashV3/package.json
+++ b/Tasks/BashV3/package.json
@@ -17,7 +17,12 @@
   },
   "homepage": "https://github.com/Microsoft/azure-pipelines-tasks#readme",
   "dependencies": {
+    "@types/node": "^10.17.0",
+    "@types/mocha": "^5.2.7",
     "uuid": "^3.0.1",
-    "azure-pipelines-task-lib": "2.11.1"
+    "azure-pipelines-task-lib": "^3.0.6-preview.0"
+  },
+  "devDependencies": {
+    "typescript": "4.0.2"
   }
 }
