--- a/Tasks/NodeToolV0/package.json
+++ b/Tasks/NodeToolV0/package.json
@@ -27,8 +27,8 @@
     "@types/mocha": "^5.2.7",
     "@types/q": "^1.0.7",
     "typed-rest-client": "1.0.7",
-    "azure-pipelines-task-lib": "3.0.6-preview.0",
-    "azure-pipelines-tool-lib": "^0.12.0"
+    "azure-pipelines-task-lib": "^3.0.6-preview.0",
+    "azure-pipelines-tool-lib": "^1.0.0-preview.0"
   },
   "devDependencies": {
     "typescript": "4.0.2"
