--- a/Tasks/ArchiveFilesV2/package.json
+++ b/Tasks/ArchiveFilesV2/package.json
@@ -19,6 +19,6 @@
     "azure-pipelines-task-lib": "^3.0.6-preview.0"
   },
   "devDependencies": {
-    "typescript": "^4.0.0"
+    "typescript": "4.0.2"
   }
 }
