--- a/Tasks/GoToolV0/package.json
+++ b/Tasks/GoToolV0/package.json
@@ -24,6 +24,6 @@
   "dependencies": {
     "azure-pipelines-tool-lib": "0.12.0",
     "azure-pipelines-task-lib": "2.8.0",
-    "utility-common": "file:../../_build/Tasks/Common/utility-common-1.0.2.tgz"
+    "utility-common-v2": "file:../../_build/Tasks/Common/utility-common-v2-2.0.0.tgz"
   }
 }
