--- a/Tasks/NuGetToolInstallerV1/package.json
+++ b/Tasks/NuGetToolInstallerV1/package.json
@@ -24,6 +24,6 @@
     "homepage": "https://github.com/Microsoft/azure-pipelines-tasks#readme",
     "dependencies": {
         "packaging-common": "file:../../_build/Tasks/Common/packaging-common-1.0.1.tgz",
-        "utility-common": "file:../../_build/Tasks/Common/utility-common-1.0.2.tgz"
+        "utility-common-v2": "file:../../_build/Tasks/Common/utility-common-v2-2.0.0.tgz"
     }
 }
