--- a/Tasks/DotNetCoreInstallerV1/package.json
+++ b/Tasks/DotNetCoreInstallerV1/package.json
@@ -30,6 +30,6 @@
     "azure-pipelines-tool-lib": "0.12.0",
     "typed-rest-client": "0.11.0",
     "semver": "6.3.0",
-    "utility-common": "file:../../_build/Tasks/Common/utility-common-1.0.2.tgz"
+    "utility-common-v2": "file:../../_build/Tasks/Common/utility-common-v2-2.0.0.tgz"
   }
 }
