--- a/Tasks/UseDotNetV2/package.json
+++ b/Tasks/UseDotNetV2/package.json
@@ -31,7 +31,6 @@
     "packaging-common": "file:../../_build/Tasks/Common/packaging-common-1.0.1.tgz",
     "semver": "6.3.0",
     "typed-rest-client": "0.11.0",
-    "utility-common-v2": "file:../../_build/Tasks/Common/utility-common-v2-2.0.0.tgz",
-    "utility-common": "file:../../_build/Tasks/Common/utility-common-1.0.2.tgz"
+    "utility-common-v2": "file:../../_build/Tasks/Common/utility-common-v2-2.0.0.tgz"
   }
 }
