--- a/Tasks/NuGetInstallerV0/package.json
+++ b/Tasks/NuGetInstallerV0/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/Microsoft/azure-pipelines-tasks#readme",
   "dependencies": {
     "packaging-common": "file:../../_build/Tasks/Common/packaging-common-1.0.1.tgz",
+    "utility-common": "file:../../_build/Tasks/Common/utility-common-1.0.2.tgz",
     "utility-common-v2": "file:../../_build/Tasks/Common/utility-common-v2-2.0.0.tgz",
     "xmlreader": "^0.2.3"
   }
