--- a/Tasks/AzurePowerShellV5/package.json
+++ b/Tasks/AzurePowerShellV5/package.json
@@ -9,6 +9,6 @@
         "@types/q": "1.0.7",
         "azure-pipelines-tasks-azure-arm-rest-v2": "1.0.3",
         "azure-pipelines-task-lib": "2.8.0",
-        "utility-common": "file:../../_build/Tasks/Common/utility-common-1.0.2.tgz"
+        "utility-common-v2": "file:../../_build/Tasks/Common/utility-common-v2-2.0.0.tgz"
     }
 }
