--- a/Tasks/Common/utility-common-v3/package.json
+++ b/Tasks/Common/utility-common-v3/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "utility-common-v2",
-  "version": "2.0.0",
+  "name": "utility-common-v3",
+  "version": "3.0.0",
   "description": "Common Library for Azure Rest Calls",
   "repository": {
     "type": "git",
@@ -14,8 +14,8 @@
   "homepage": "https://github.com/Microsoft/azure-pipelines-tasks#readme",
   "dependencies": {
     "semver": "^5.4.1",
-    "azure-pipelines-task-lib": "2.8.0",
-    "azure-pipelines-tool-lib": "0.12.0",
-    "js-yaml": "3.6.1"
+    "azure-pipelines-task-lib": "^3.0.6-preview.0",
+    "azure-pipelines-tool-lib": "^1.0.0-preview.0",
+    "js-yaml": "^3.6.1"
   }
 }
