--- a/Tasks/Common/utility-common-v3/package.json
+++ b/Tasks/Common/utility-common-v3/package.json
@@ -16,6 +16,7 @@
     "semver": "^5.4.1",
     "azure-pipelines-task-lib": "^3.0.6-preview.0",
     "azure-pipelines-tool-lib": "^1.0.0-preview.0",
-    "js-yaml": "^3.6.1"
+    "js-yaml": "^3.6.1",
+    "@types/node": "^10.17.0"
   }
 }
