--- a/common-npm-packages/utility-common-v2/package.json
+++ b/common-npm-packages/utility-common-v2/package.json
@@ -19,7 +19,8 @@
     "semver": "^5.4.1",
     "azure-pipelines-task-lib": "^2.8.0",
     "azure-pipelines-tool-lib": "0.12.0",
-    "js-yaml": "3.6.1"
+    "js-yaml": "3.6.1",
+    "@types/node": "6.0.68"
   },
   "devDependencies": {
     "typescript": "2.3.4"
