--- a/Tasks/XamariniOSV2/package.json
+++ b/Tasks/XamariniOSV2/package.json
@@ -17,8 +17,13 @@
   },
   "homepage": "https://github.com/Microsoft/azure-pipelines-tasks#readme",
   "dependencies": {
-    "@types/node": "^6.0.101",
-    "azure-pipelines-task-lib": "^2.9.3",
+    "@types/mocha": "^5.2.7",
+    "@types/node": "^10.17.0",
+    "@types/uuid": "^8.3.0",
+    "azure-pipelines-task-lib": "^3.0.6-preview.0",
     "msbuildhelpers": "file:../../_build/Tasks/Common/msbuildhelpers-1.0.0.tgz"
+  },
+  "devDependencies": {
+    "typescript": "4.0.2"
   }
 }
