--- a/common-npm-packages/artifacts-common/package.json
+++ b/common-npm-packages/artifacts-common/package.json
@@ -13,7 +13,7 @@
   "license": "MIT",
   "dependencies": {
     "@types/fs-extra": "8.0.0",
-    "@types/node": "^10.17.0",
+    "@types/node": "10.17.0",
     "@types/mocha": "5.2.6",
     "azure-devops-node-api": "10.1.2",
     "azure-pipelines-task-lib": "3.0.6-preview.0",
