--- a/Tasks/Common/packaging-common/package.json
+++ b/Tasks/Common/packaging-common/package.json
@@ -1,6 +1,6 @@
 {
   "name": "packaging-common",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Azure Pipelines Packaging Tasks Common",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,13 +14,13 @@
   "dependencies": {
     "@types/ini": "1.3.30",
     "@types/ltx": "2.8.0",
-    "@types/mocha": "5.2.6",
+    "@types/mocha": "5.2.7",
     "@types/mockery": "1.4.29",
-    "@types/node": "10.12.9",
+    "@types/node": "10.17.0",
     "@types/q": "1.5.2",
     "adm-zip": "^0.4.11",
-    "azure-devops-node-api": "8.0.0",
-    "azure-pipelines-task-lib": "2.8.0",
+    "azure-devops-node-api": "10.1.2",
+    "azure-pipelines-task-lib": "3.0.6-preview.0",
     "azure-pipelines-tool-lib": "0.12.0",
     "ini": "^1.3.4",
     "ip-address": "^5.8.9",
@@ -28,5 +28,8 @@
     "q": "^1.5.0",
     "semver": "^5.5.0",
     "typed-rest-client": "1.2.0"
+  },
+  "devDependencies": {
+    "typescript": "4.0.2"
   }
 }
