--- a/Tasks/DownloadPackageV1/package.json
+++ b/Tasks/DownloadPackageV1/package.json
@@ -1,6 +1,6 @@
 {
   "name": "downloadpackage",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Download Package Task",
   "main": "downloadPackages.js",
   "scripts": {
@@ -17,13 +17,16 @@
   },
   "homepage": "https://github.com/Microsoft/vsts-tasks#readme",
   "dependencies": {
-    "@types/mocha": "^2.2.5",
-    "@types/node": "^6.14.2",
-    "azure-devops-node-api": "9.0.1",
-    "azure-pipelines-task-lib": "2.8.0",
+    "@types/mocha": "5.2.6",
+    "@types/node": "10.17.0",
+    "azure-devops-node-api": "10.1.2",
+    "azure-pipelines-task-lib": "3.0.6-preview.0",
     "decompress-zip": "0.3.0",
-    "packaging-common": "file:../../_build/Tasks/Common/packaging-common-1.0.1.tgz",
+    "packaging-common": "file:../../_build/Tasks/Common/packaging-common-1.0.2.tgz",
     "tar-fs": "1.16.3",
-    "utility-common": "file:../../_build/Tasks/Common/utility-common-1.0.2.tgz"
+    "utility-common": "file:../../_build/Tasks/Common/utility-common-1.0.3.tgz"
+  },
+  "devDependencies": {
+    "typescript": "4.0.2"
   }
 }
