--- a/Tasks/NuGetAuthenticateV0/package.json
+++ b/Tasks/NuGetAuthenticateV0/package.json
@@ -23,6 +23,7 @@
     },
     "homepage": "https://github.com/Microsoft/azure-pipelines-tasks#readme",
     "dependencies": {
-        "azure-pipelines-tasks-artifacts-common": "1.0.1"
+        "azure-pipelines-tasks-artifacts-common": "1.179.1",
+        "azure-pipelines-task-lib": "3.0.6-preview.0"
     }
 }
