--- a/Tasks/UseRubyVersionV0/package.json
+++ b/Tasks/UseRubyVersionV0/package.json
@@ -27,6 +27,6 @@
     "@types/q": "^1.0.7",
     "azure-pipelines-task-lib": "^2.9.3",
     "azure-pipelines-tasks-utility-common": "^2.0.0",
-    "vsts-task-tool-lib": "^0.5.1"
+    "azure-pipelines-tool-lib": "^0.12.0"
   }
 }
