--- a/common-npm-packages/az-blobstorage-provider-v2/package.json
+++ b/common-npm-packages/az-blobstorage-provider-v2/package.json
@@ -16,10 +16,10 @@
     "q": "1.4.1",
     "artifact-engine": "0.1.29",
     "azure-storage": "2.2.1",
-    "azure-pipelines-task-lib": "2.8.0"
+    "azure-pipelines-task-lib": "3.0.6-preview.0"
   },
   "devDependencies": {
-    "typescript": "2.3.4"
+    "typescript": "4.0.2"
   },
   "scripts": {
     "build": "cd ../build-scripts && npm install && cd ../az-blobstorage-provider-v2 && node make.js"
