--- a/Tasks/NuGetAuthenticateV0/package.json
+++ b/Tasks/NuGetAuthenticateV0/package.json
@@ -24,6 +24,10 @@
     "homepage": "https://github.com/Microsoft/azure-pipelines-tasks#readme",
     "dependencies": {
         "azure-pipelines-tasks-artifacts-common": "1.179.1",
-        "azure-pipelines-task-lib": "3.0.6-preview.0"
+        "azure-pipelines-task-lib": "3.0.6-preview.0",
+        "@types/node": "10.17.0"
+    },
+    "devDependencies": {
+        "typescript": "4.0.2"
     }
 }
