--- a/common-npm-packages/packaging-common/package.json
+++ b/common-npm-packages/packaging-common/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "packaging-common",
-  "version": "1.0.2",
+  "name": "azure-pipelines-tasks-packaging-common",
+  "version": "2.0.0-preview.0",
   "description": "Azure Pipelines Packaging Tasks Common",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
