--- a/common-npm-packages/packaging-common/package.json
+++ b/common-npm-packages/packaging-common/package.json
@@ -15,14 +15,14 @@
   "dependencies": {
     "@types/ini": "1.3.30",
     "@types/ltx": "2.8.0",
-    "@types/mocha": "5.2.6",
+    "@types/mocha": "^5.2.6",
     "@types/mockery": "1.4.29",
-    "@types/node": "10.12.9",
+    "@types/node": "^10.12.9",
     "@types/q": "1.5.2",
     "adm-zip": "^0.4.11",
     "azure-devops-node-api": "8.0.0",
-    "azure-pipelines-task-lib": "2.8.0",
-    "azure-pipelines-tool-lib": "0.12.0",
+    "azure-pipelines-task-lib": "^3.0.6-preview.0",
+    "azure-pipelines-tool-lib": "1.0.0-preview.0",
     "ini": "^1.3.4",
     "ip-address": "^5.8.9",
     "ltx": "^2.6.2",
