--- a/Tasks/JavaToolInstallerV0/package.json
+++ b/Tasks/JavaToolInstallerV0/package.json
@@ -29,6 +29,7 @@
         "azure-pipelines-task-lib": "2.9.3",
         "azure-pipelines-tasks-azure-arm-rest": "1.0.0",
         "azure-pipelines-tool-lib": "0.12.0",
-        "typed-rest-client": "1.0.7"
+        "typed-rest-client": "1.0.7",
+        "utility-common-v2": "file:../../_build/Tasks/Common/utility-common-v2-2.0.0.tgz"
     }
 }
