--- a/Tasks/JavaToolInstallerV0/package.json
+++ b/Tasks/JavaToolInstallerV0/package.json
@@ -31,7 +31,7 @@
         "azure-pipelines-tasks-azure-arm-rest-v2": "2.0.0-preview.0",
         "azure-pipelines-tool-lib": "1.0.0-preview.0",
         "typed-rest-client": "1.0.7",
-        "utility-common-v2": "file:../../_build/Tasks/Common/utility-common-v2-2.0.0.tgz"
+        "azure-pipelines-tasks-utility-common": "3.0.0-preview.0"
     },
     "devDependencies": {
         "typescript": "4.0.2"
