--- a/Tasks/XamariniOSV2/package.json
+++ b/Tasks/XamariniOSV2/package.json
@@ -21,7 +21,7 @@
     "@types/node": "^10.17.0",
     "@types/uuid": "^8.3.0",
     "azure-pipelines-task-lib": "^3.0.6-preview.0",
-    "msbuildhelpers": "file:../../_build/Tasks/Common/msbuildhelpers-1.0.0.tgz"
+    "azure-pipelines-tasks-msbuildhelpers": "^2.0.0-preview.0"
   },
   "devDependencies": {
     "typescript": "4.0.2"
