--- a/Tasks/DownloadPackageV1/package.json
+++ b/Tasks/DownloadPackageV1/package.json
@@ -24,9 +24,7 @@
     "azure-pipelines-tasks-packaging-common": "2.0.0-preview.0",
     "azure-pipelines-tasks-utility-common": "3.0.0-preview.0",
     "decompress-zip": "0.3.0",
-    "packaging-common": "file:../../_build/Tasks/Common/packaging-common-1.0.1.tgz",
-    "tar-fs": "1.16.3",
-    "utility-common": "file:../../_build/Tasks/Common/utility-common-1.0.2.tgz"
+    "tar-fs": "1.16.3"
   },
   "devDependencies": {
     "typescript": "4.0.2"
