--- a/Tasks/HelmDeployV0/package.json
+++ b/Tasks/HelmDeployV0/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
-    "@types/node": "^6.0.101",
+    "@types/mocha": "^5.2.7",
+    "@types/node": "^10.17.0",
     "@types/q": "^1.5.0",
+    "@types/uuid": "^8.3.0",
     "azure-pipelines-task-lib": "2.8.0",
     "azure-pipelines-tasks-azure-arm-rest-v2": "1.0.4",
     "azure-pipelines-tasks-kubernetes-common-v2": "1.0.1",
@@ -10,5 +12,8 @@
     "moment": "2.21.0",
     "utility-common-v2": "file:../../_build/Tasks/Common/utility-common-v2-2.0.0.tgz",
     "vsts-task-tool-lib": "0.4.0"
+  },
+  "devDependencies": {
+    "typescript": "4.0.2"
   }
 }
