--- a/Tasks/HelmInstallerV1/package.json
+++ b/Tasks/HelmInstallerV1/package.json
@@ -1,9 +1,14 @@
 {
   "dependencies": {
-    "@types/node": "^6.0.101",
+    "@types/node": "^10.17.0",
     "@types/q": "^1.5.0",
+    "@types/mocha": "^5.2.7",
+    "@types/uuid": "^8.3.0",
     "azure-pipelines-task-lib": "2.8.0",
     "azure-pipelines-tool-lib": "0.11.0",
     "azure-pipelines-tasks-kubernetes-common-v2": "1.0.1"
+  },
+  "devDependencies": {
+    "typescript": "4.0.2"
   }
 }
