--- a/Tasks/XamarinAndroidV1/package.json
+++ b/Tasks/XamarinAndroidV1/package.json
@@ -22,7 +22,7 @@
     "@types/uuid": "^8.3.0",
     "@types/q": "^1.5.1",
     "azure-pipelines-task-lib": "^3.0.6-preview.0",
-    "azure-pipelines-tasks-java-common": "2.0.0-preview.0"
+    "azure-pipelines-tasks-java-common": "^2.0.0-preview.0"
   },
   "devDependencies": {
     "typescript": "4.0.2"
