--- a/Tasks/AzureSpringCloudAppDeployV0/package.json
+++ b/Tasks/AzureSpringCloudAppDeployV0/package.json
@@ -17,10 +17,11 @@
   },
   "homepage": "https://github.com/Microsoft/azure-pipelines-tasks#readme",
   "dependencies": {
+    "@azure/storage-blob": "^12.3.0",
     "@types/mocha": "2.2.48",
     "@types/node": "6.0.68",
     "@types/q": "1.0.7",
-    "azure-pipelines-tasks-azure-arm-rest-v2": "1.0.4",
+    "azure-pipelines-tasks-azure-arm-rest-v2": "file:../../common-npm-packages/azure-arm-rest-v2",
     "moment": "2.21.0",
     "q": "1.4.1",
     "uuid": "3.1.0",
