--- a/common-npm-packages/azure-arm-rest-v2/package.json
+++ b/common-npm-packages/azure-arm-rest-v2/package.json
@@ -1,6 +1,6 @@
 {
   "name": "azure-pipelines-tasks-azure-arm-rest-v2",
-  "version": "1.178.1",
+  "version": "1.178.2",
   "description": "Common Lib for Azure ARM REST apis",
   "repository": {
     "type": "git",
@@ -13,13 +13,14 @@
   },
   "homepage": "https://github.com/Microsoft/azure-pipelines-tasks#readme",
   "dependencies": {
-    "jsonwebtoken": "7.3.0",
-    "q": "1.4.1",
-    "typed-rest-client": "1.7.3",
-    "azure-pipelines-task-lib": "^2.11.2",
     "@types/mocha": "2.2.48",
     "@types/node": "6.0.68",
-    "@types/q": "1.0.7"
+    "@types/q": "1.0.7",
+    "azure-pipelines-task-lib": "^2.11.2",
+    "azure-storage": "^2.10.3",
+    "jsonwebtoken": "7.3.0",
+    "q": "1.4.1",
+    "typed-rest-client": "1.7.3"
   },
   "devDependencies": {
     "typescript": "2.3.4",
