--- a/Tasks/AzureFunctionOnKubernetesV0/package.json
+++ b/Tasks/AzureFunctionOnKubernetesV0/package.json
@@ -11,9 +11,14 @@
     "url": "https://github.com/microsoft/azure-pipelines-tasks/issues"
   },
   "homepage": "https://github.com/Microsoft/azure-pipelines-tasks#readme",
+  "devDependencies": {
+    "typescript": "4.0.2"
+  },
   "dependencies": {
-    "@types/node": "12.12.7",
+    "@types/mocha": "^5.2.7",
+    "@types/node": "^10.17.0",
     "@types/q": "^1.5.0",
+    "@types/uuid": "^8.3.0",
     "azure-pipelines-tasks-docker-common-v2": "1.0.0",
     "azure-pipelines-tasks-kubernetes-common-v2": "1.0.1",
     "js-yaml": "3.13.1",
