--- a/common-npm-packages/codecoverage-tools/package.json
+++ b/common-npm-packages/codecoverage-tools/package.json
@@ -8,15 +8,18 @@
     "url": "https://github.com/Microsoft/vso-agent-tasks/issues"
   },
   "dependencies": {
-    "azure-pipelines-task-lib": "^2.11.2",
+    "@types/cheerio": "0.22.0",
+    "@types/node": "^10.17.0",
+    "@types/q": "^1.5.4",
+    "azure-pipelines-task-lib": "^3.0.6-preview.0",
+    "cheerio": "^0.22.0",
     "fs-extra": "^0.30.0",
     "os": "^0.1.1",
-    "xml2js": "^0.4.17",
-    "cheerio": "^0.22.0",
-    "strip-bom": "^3.0.0"
+    "strip-bom": "^3.0.0",
+    "xml2js": "^0.4.17"
   },
   "devDependencies": {
-    "typescript": "2.3.4"
+    "typescript": "4.0.2"
   },
   "scripts": {
     "build": "cd ../build-scripts && npm install && cd ../codecoverage-tools && node make.js"
