--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -43,7 +43,7 @@ Tasks/AzureFunctionAppContainerV1/    @nadesu    @chshrikh      @pipeline-enviro
 
 Tasks/AzureFunctionOnKubernetesV0/     @ammohant    @ajinkya599
 
-Tasks/AzureFunctionV1/     @nadesu    @chshrikh  @pipeline-environment-team
+Tasks/AzureFunctionV1/     @ammohant
 
 Tasks/AzureIoTEdgeV2/     @marianan   @tameraw    @pprovost
 
