--- a/Tasks/PackerBuildV0/package.json
+++ b/Tasks/PackerBuildV0/package.json
@@ -2,9 +2,15 @@
   "name": "vsts-tasks-packerbuild",
   "main": "main.js",
   "dependencies": {
+    "@types/node": "^10.17.0",
+    "@types/mocha": "^5.2.7",
+    "@types/q": "^1.0.7",
     "azure-pipelines-tasks-azure-arm-rest": "1.0.0",
     "decompress-zip": "0.3.0",
     "moment": "2.21.0",
     "vsts-task-lib": "2.0.5"
+  },
+  "devDependencies": {
+    "typescript": "4.0.2"
   }
 }
