--- a/Tasks/PackerBuildV0/package.json
+++ b/Tasks/PackerBuildV0/package.json
@@ -8,7 +8,7 @@
     "azure-pipelines-tasks-azure-arm-rest-v2": "2.0.0-preview.0",
     "decompress-zip": "0.3.0",
     "moment": "2.21.0",
-    "vsts-task-lib": "2.0.5"
+    "azure-pipelines-task-lib": "^3.0.6-preview.0"
   },
   "devDependencies": {
     "typescript": "4.0.2"
