removing local typings

--- a/common-npm-packages/kubernetes-common-v2/package.json
+++ b/common-npm-packages/kubernetes-common-v2/package.json
@@ -13,9 +13,9 @@
   },
   "homepage": "https://github.com/Microsoft/azure-pipelines-tasks#readme",
   "dependencies": {
-    "@types/node": "^10.17.0",
-    "@types/mocha": "^5.2.7",
-    "@types/uuid": "^8.3.0",
+    "@types/node": "10.17.0",
+    "@types/mocha": "5.2.7",
+    "@types/uuid": "8.3.0",
     "azure-pipelines-task-lib": "^3.0.6-preview.0",
     "azure-pipelines-tool-lib": "1.0.0-preview.0",
     "js-yaml": "3.6.1"
