--- a/common-npm-packages/package.json
+++ b/common-npm-packages/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/microsoft/azure-pipelines-tasks-common#readme",
   "dependencies": {
-    "minimist": "^1.2.5"
+    "minimist": "^1.2.5",
+    "mocha": "2.3.3"
   }
 }
