adding changes for AzureRmDeploy-common to move to common package

--- a/common-npm-packages/AzureRmDeploy-common/tsconfig.json
+++ b/common-npm-packages/AzureRmDeploy-common/tsconfig.json
@@ -3,5 +3,8 @@
         "target": "ES6",
         "module": "commonjs",
         "declaration": true
-    }
+    },
+    "exclude": [
+        "node_modules"
+    ]
 }
