Update localize-pipeline.yml for Azure Pipelines

--- a/Localize/localize-pipeline.yml
+++ b/Localize/localize-pipeline.yml
@@ -13,6 +13,9 @@ stages:
       inputs:
         locProj: 'Localize/LocProject.json'
         outDir: '$(Build.ArtifactStagingDirectory)'
+        packageSourceAuth: 'patAuth'
+        patVariable: 'LocalizationPAT'
 
     - task: PublishBuildArtifacts@1
       displayName: 'Publish Artifact: drop'
+
