Update localize-pipeline.yml for Azure Pipelines

--- a/Localize/localize-pipeline.yml
+++ b/Localize/localize-pipeline.yml
@@ -14,7 +14,7 @@ stages:
         locProj: 'Localize/LocProject.json'
         outDir: '$(Build.ArtifactStagingDirectory)'
         packageSourceAuth: 'patAuth'
-        patVariable: 'LocalizationPAT'
+        patVariable: '$(OneLocBuildPAT)'
 
     - task: PublishBuildArtifacts@1
       displayName: 'Publish Artifact: drop'
