Update localize-pipeline.yml for Azure Pipelines

--- a/Localize/localize-pipeline.yml
+++ b/Localize/localize-pipeline.yml
@@ -15,6 +15,13 @@ stages:
         outDir: '$(Build.ArtifactStagingDirectory)'
         packageSourceAuth: 'patAuth'
         patVariable: '$(OneLocBuildPAT)'
+        isCreatePrSelected: true
+        repoType: 'gitHub'
+        prSourceBranchPrefix: 'Localize'
+        gitHubPatVariable: '$(GitHubPAT)'
+        isAutoCompletePrSelected: false
+      env:
+          SYSTEM_ACCESSTOKEN: $(System.AccessToken)
 
     - task: PublishBuildArtifacts@1
       displayName: 'Publish Artifact: drop'
