--- a/common-npm-packages/codecoverage-tools/package.json
+++ b/common-npm-packages/codecoverage-tools/package.json
@@ -1,6 +1,6 @@
 {
   "name": "azure-pipelines-tasks-codecoverage-tools",
-  "version": "2.0.0-preview.0",
+  "version": "2.0.0",
   "author": "Microsoft Corporation",
   "description": "VSTS Tasks Code Coverage Tools",
   "license": "MIT",
@@ -11,7 +11,7 @@
     "@types/cheerio": "0.22.0",
     "@types/node": "^10.17.0",
     "@types/q": "^1.5.4",
-    "azure-pipelines-task-lib": "^3.0.6-preview.0",
+    "azure-pipelines-task-lib": "^3.1.0",
     "cheerio": "^0.22.0",
     "fs-extra": "^0.30.0",
     "os": "^0.1.1",
