--- a/common-npm-packages/AzureRmDeploy-common/package.json
+++ b/common-npm-packages/AzureRmDeploy-common/package.json
@@ -1,6 +1,6 @@
 {
   "name": "azure-pipelines-tasks-azurermdeploycommon",
-  "version": "2.0.0-preview.0",
+  "version": "2.0.0",
   "description": "Common Lib for Azure ARM REST apis",
   "repository": {
     "type": "git",
@@ -22,7 +22,7 @@
     "jsonwebtoken": "7.3.0",
     "q": "1.5.1",
     "typed-rest-client": "0.12.0",
-    "azure-pipelines-task-lib": "3.0.6-preview.0",
+    "azure-pipelines-task-lib": "^3.1.0",
     "archiver": "2.1.1",
     "decompress-zip": "0.3.0",
     "ltx": "2.6.2",
