--- a/common-npm-packages/MSBuildHelpers/package.json
+++ b/common-npm-packages/MSBuildHelpers/package.json
@@ -1,6 +1,6 @@
 {
   "name": "azure-pipelines-tasks-msbuildhelpers",
-  "version": "2.0.0-preview.0",
+  "version": "2.0.0",
   "description": "Azure Pipelines tasks MSBuild helpers",
   "main": "msbuildhelpers.js",
   "scripts": {
@@ -17,7 +17,7 @@
   },
   "homepage": "https://github.com/Microsoft/azure-pipelines-tasks#readme",
   "dependencies": {
-    "azure-pipelines-task-lib": "^3.0.6-preview.0",
+    "azure-pipelines-task-lib": "^3.1.0",
     "@types/node": "^10.17.0",
     "@types/mocha": "^5.2.7"
   },
