--- a/common-npm-packages/az-blobstorage-provider-v2/package.json
+++ b/common-npm-packages/az-blobstorage-provider-v2/package.json
@@ -1,6 +1,6 @@
 {
   "name": "azp-tasks-az-blobstorage-provider-v2",
-  "version": "2.0.0-preview.0",
+  "version": "2.0.0",
   "description": "Common Library to download blobs from azure storage",
   "repository": {
     "type": "git",
@@ -16,7 +16,7 @@
     "q": "1.4.1",
     "artifact-engine": "0.1.29",
     "azure-storage": "2.2.1",
-    "azure-pipelines-task-lib": "3.0.6-preview.0"
+    "azure-pipelines-task-lib": "^3.1.0"
   },
   "devDependencies": {
     "typescript": "4.0.2"
