--- a/common-npm-packages/docker-common-v2/package.json
+++ b/common-npm-packages/docker-common-v2/package.json
@@ -1,6 +1,6 @@
 {
   "name": "azure-pipelines-tasks-docker-common-v2",
-  "version": "2.0.1-preview.0",
+  "version": "2.0.1",
   "description": "Common Library for Azure Rest Calls",
   "repository": {
     "type": "git",
@@ -19,7 +19,7 @@
     "@types/q": "1.5.4",
     "del": "2.2.0",
     "q": "1.4.1",
-    "azure-pipelines-task-lib": "3.0.6-preview.0"
+    "azure-pipelines-task-lib": "^3.1.0"
   },
   "devDependencies": {
     "typescript": "4.0.2"
