--- a/common-npm-packages/ios-signing-common/package.json
+++ b/common-npm-packages/ios-signing-common/package.json
@@ -1,6 +1,6 @@
 {
   "name": "azure-pipelines-tasks-ios-signing-common",
-  "version": "2.0.3-preview",
+  "version": "2.0.3",
   "description": "Azure Pipelines tasks iOS Signing Common",
   "main": "ios-signing-common.js",
   "scripts": {
@@ -19,9 +19,9 @@
   "dependencies": {
     "@types/node": "^10.17.0",
     "@types/q": "^1.5.4",
-    "azure-pipelines-task-lib": "^3.0.6-preview.0"
+    "azure-pipelines-task-lib": "^3.1.0"
   },
   "devDependencies": {
-    "typescript": "^4.0.0"
+    "typescript": "4.0.2"
   }
 }
