--- a/common-npm-packages/java-common/package.json
+++ b/common-npm-packages/java-common/package.json
@@ -1,6 +1,6 @@
 {
   "name": "azure-pipelines-tasks-java-common",
-  "version": "2.0.0-preview.0",
+  "version": "2.0.0",
   "description": "Azure Pipelines tasks Java Common",
   "main": "java-common.js",
   "scripts": {
@@ -19,7 +19,7 @@
   "dependencies": {
     "@types/semver": "^7.3.3",
     "semver": "^7.3.2",
-    "azure-pipelines-task-lib": "^3.0.6-preview.0",
+    "azure-pipelines-task-lib": "^3.1.0",
     "@types/node": "^10.17.0"
   },
   "devDependencies": {
