--- a/common-npm-packages/kubernetes-common-v2/package.json
+++ b/common-npm-packages/kubernetes-common-v2/package.json
@@ -1,6 +1,6 @@
 {
   "name": "azure-pipelines-tasks-kubernetes-common-v2",
-  "version": "2.0.0-preview.0",
+  "version": "2.0.0",
   "description": "Common Library for Kubernetes",
   "repository": {
     "type": "git",
@@ -16,7 +16,7 @@
     "@types/node": "10.17.0",
     "@types/mocha": "5.2.7",
     "@types/uuid": "8.3.0",
-    "azure-pipelines-task-lib": "^3.0.6-preview.0",
+    "azure-pipelines-task-lib": "^3.1.0",
     "azure-pipelines-tool-lib": "1.0.0-preview.0",
     "js-yaml": "3.6.1"
   },
