--- a/common-npm-packages/packaging-common/package.json
+++ b/common-npm-packages/packaging-common/package.json
@@ -1,6 +1,6 @@
 {
   "name": "azure-pipelines-tasks-packaging-common",
-  "version": "2.0.0-preview.1",
+  "version": "2.0.0",
   "description": "Azure Pipelines Packaging Tasks Common",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -21,7 +21,7 @@
     "@types/q": "1.5.2",
     "adm-zip": "^0.4.11",
     "azure-devops-node-api": "8.0.0",
-    "azure-pipelines-task-lib": "^3.0.6-preview.0",
+    "azure-pipelines-task-lib": "^3.1.0",
     "azure-pipelines-tool-lib": "1.0.0-preview.0",
     "ini": "^1.3.4",
     "ip-address": "^5.8.9",
