--- a/common-npm-packages/securefiles-common/package.json
+++ b/common-npm-packages/securefiles-common/package.json
@@ -1,6 +1,6 @@
 {
   "name": "azure-pipelines-tasks-securefiles-common",
-  "version": "2.0.5-preview",
+  "version": "2.0.5",
   "description": "Azure Pipelines tasks SecureFiles Common",
   "main": "securefiles-common.js",
   "scripts": {
@@ -20,9 +20,9 @@
     "@types/node": "^10.17.0",
     "@types/q": "^1.5.4",
     "azure-devops-node-api": "10.1.2",
-    "azure-pipelines-task-lib": "^3.0.6-preview.0"
+    "azure-pipelines-task-lib": "^3.1.0"
   },
   "devDependencies": {
-    "typescript": "^4.0.0"
+    "typescript": "4.0.2"
   }
 }
