--- a/common-npm-packages/utility-common-v2/package.json
+++ b/common-npm-packages/utility-common-v2/package.json
@@ -1,6 +1,6 @@
 {
   "name": "azure-pipelines-tasks-utility-common",
-  "version": "3.0.0-preview.0",
+  "version": "3.0.0",
   "description": "Common Library for Azure Rest Calls",
   "repository": {
     "type": "git",
@@ -17,7 +17,7 @@
   "homepage": "https://github.com/Microsoft/azure-pipelines-tasks#readme",
   "dependencies": {
     "semver": "^5.4.1",
-    "azure-pipelines-task-lib": "^3.0.6-preview.0",
+    "azure-pipelines-task-lib": "^3.1.0",
     "azure-pipelines-tool-lib": "1.0.0-preview.0",
     "js-yaml": "3.6.1",
     "@types/node": "^10.17.0"
