--- a/common-npm-packages/webdeployment-common-v2/package.json
+++ b/common-npm-packages/webdeployment-common-v2/package.json
@@ -1,6 +1,6 @@
 {
   "name": "azure-pipelines-tasks-webdeployment-common",
-  "version": "3.0.0-preview.1",
+  "version": "3.0.0",
   "description": "Common Lib for MSDeploy Utility",
   "repository": {
     "type": "git",
@@ -22,7 +22,7 @@
     "decompress-zip": "0.3.0",
     "ltx": "2.8.0",
     "q": "1.4.1",
-    "azure-pipelines-task-lib": "3.0.6-preview.0",
+    "azure-pipelines-task-lib": "^3.1.0",
     "winreg": "1.2.2",
     "xml2js": "0.4.13",
     "xmldom": "^0.1.27"
